refactor code using ES Modules

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <button id="submit">Submit</button>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 
 </html>
